feat!: restructure with projects and sets

--- a/ansible/roles/argocd/files/application.yaml
+++ b/ansible/roles/argocd/files/application.yaml
@@ -1,19 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: gateway
+  name: root
   namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "4"
 spec:
   project: default
   source:
     repoURL: https://github.com/nunoferna/homelab.git
     targetRevision: main
-    path: gitops/infrastructure/gateway/base
+    path: gitops/bootstrap
   destination:
     server: https://kubernetes.default.svc
-    namespace: gateway-infra
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
