feat: add cilium on gitops infra
Signed-off-by: Nuno Fernandes <nuno.o.fernandes@outlook.pt>

--- a/ansible/roles/k3s/tasks/main.yml
+++ b/ansible/roles/k3s/tasks/main.yml
@@ -84,7 +84,7 @@
     release_namespace: kube-system
     create_namespace: true
     values_files:
-      - "{{ role_path }}/files/cilium-values.yaml"
+      - "{{ playbook_dir }}/../../gitops/infrastructure/cilium/values.yaml"
   environment:
     KUBECONFIG: "{{ k3s_kubeconfig }}"
   tags: [k3s, cilium]
@@ -92,20 +92,4 @@
 - name: Wait for Cilium to be ready
   ansible.builtin.command: k3s kubectl -n kube-system rollout status ds/cilium --timeout=300s
   changed_when: false
-  tags: [k3s, cilium]
-
-- name: Apply Cilium LoadBalancer IP Pool manifest
-  ansible.builtin.command: "k3s kubectl apply -f {{ role_path }}/files/lbippool.yaml"
-  environment:
-    KUBECONFIG: "{{ k3s_kubeconfig }}"
-  register: k3s_lbpool_apply
-  changed_when: "'configured' in k3s_lbpool_apply.stdout or 'created' in k3s_lbpool_apply.stdout"
-  tags: [k3s, cilium]
-
-- name: Apply Cilium L2 Announcement Policy manifest
-  ansible.builtin.command: "k3s kubectl apply -f {{ role_path }}/files/l2announcementpolicy.yaml"
-  environment:
-    KUBECONFIG: "{{ k3s_kubeconfig }}"
-  register: k3s_l2policy_apply
-  changed_when: "'configured' in k3s_l2policy_apply.stdout or 'created' in k3s_l2policy_apply.stdout"
   tags: [k3s, cilium]
