--- a/ansible/roles/k3s/tasks/kubeconfig.yml
+++ b/ansible/roles/k3s/tasks/kubeconfig.yml
@@ -4,6 +4,7 @@
     path: "{{ k3s_system_kubeconfig }}"
   register: k3s_kubeconfig_exists
   tags: kubeconfig
+  become: true
 
 - name: Configure user kubeconfig access
   when: k3s_kubeconfig_exists.stat.exists
@@ -24,6 +25,7 @@
         group: "{{ ansible_user_id }}"
         mode: "0600"
       tags: kubeconfig
+      become: true
 
     - name: Display kubeconfig setup status
       ansible.builtin.debug:
