--- a/gitops/infrastructure/cilium/base/gateway.yaml
+++ b/gitops/infrastructure/cilium/base/gateway.yaml
@@ -2,9 +2,8 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: homelab-gateway
-  namespace: gateway-infra
+  namespace: gateway
   annotations:
-    argocd.argoproj.io/sync-wave: "2"
     cert-manager.io/cluster-issuer: vault-issuer
     cert-manager.io/duration: 720h
     cert-manager.io/renew-before: 72h
