--- a/gitops/infrastructure/vault/base/httproute.yaml
+++ b/gitops/infrastructure/vault/base/httproute.yaml
@@ -3,19 +3,13 @@ kind: HTTPRoute
 metadata:
   name: vault
   namespace: vault
-  annotations:
-    argocd.argoproj.io/sync-wave: "5"
 spec:
   parentRefs:
     - name: homelab-gateway
-      namespace: gateway-infra
+      namespace: gateway
   hostnames:
     - vault.home.lab
   rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /
-      backendRefs:
+    - backendRefs:
         - name: vault-ui
           port: 8200
