--- a/gitops/infrastructure/kubeflow/base/kustomization.yaml
+++ b/gitops/infrastructure/kubeflow/base/kustomization.yaml
@@ -2,13 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - httproute.yaml
+  - allow-istio-access.yaml
   # === 1. ISTIO STACK (The Foundation) ===
   # Installs Custom Resource Definitions (VirtualService, Gateway, etc.)
   - https://github.com/kubeflow/manifests/common/istio/istio-crds/base?ref=v1.11.0
-  
+
   # Creates 'istio-system' namespace
   - https://github.com/kubeflow/manifests/common/istio/istio-namespace/base?ref=v1.11.0
-  
+
   # Installs Istiod (Control Plane) and Ingress Gateway
   # Using 'oauth2-proxy' overlay is standard for Kubeflow, even if you disable auth later.
   - https://github.com/kubeflow/manifests/common/istio/istio-install/overlays/oauth2-proxy?ref=v1.11.0
