--- a/gitops/infrastructure/kubeflow/base/kustomization.yaml
+++ b/gitops/infrastructure/kubeflow/base/kustomization.yaml
@@ -1,6 +1,37 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+sortOptions:
+  order: legacy
+  legacySortOptions:
+    orderFirst:
+    - Namespace
+    - ResourceQuota
+    - StorageClass
+    - CustomResourceDefinition
+    - MutatingWebhookConfiguration
+    - ServiceAccount
+    - PodSecurityPolicy
+    - NetworkPolicy
+    - Role
+    - ClusterRole
+    - RoleBinding
+    - ClusterRoleBinding
+    - ConfigMap
+    - Secret
+    - Endpoints
+    - Service
+    - LimitRange
+    - PriorityClass
+    - PersistentVolume
+    - PersistentVolumeClaim
+    - Deployment
+    - StatefulSet
+    - CronJob
+    - PodDisruptionBudget
+    orderLast:
+    - ValidatingWebhookConfiguration
+
 resources:
   - httproute.yaml
   - allow-istio-access.yaml
@@ -40,6 +71,9 @@ resources:
 
   # Admission Webhook (Required for defaults)
   - https://github.com/kubeflow/manifests/applications/admission-webhook/upstream/overlays/cert-manager?ref=v1.11.0
+
+  # Spark Operator
+  - https://github.com/kubeflow/manifests/applications/spark/spark-operator/overlays/kubeflow?ref=v1.11.0
 
   # === 4. CUSTOM PATCHES/FIXES ===
   # (Include your SeaweedFS shim or other fixes here if still needed)
