--- a/gitops/bootstrap/projects.yaml
+++ b/gitops/bootstrap/projects.yaml
@@ -30,3 +30,6 @@ spec:
   destinations:
     - namespace: "*"
       server: https://kubernetes.default.svc
+  clusterResourceWhitelist:
+    - group: "*"
+      kind: "*"
