--- a/gitops/infrastructure/cert-manager/app.yaml
+++ b/gitops/infrastructure/cert-manager/app.yaml
@@ -1,6 +1,5 @@
 appName: cert-manager
 namespace: cert-manager
-chart: cert-manager
-repoURL: https://charts.jetstack.io
+repoURL: oci://quay.io/jetstack/charts/cert-manager
 targetRevision: v1.19.2
 syncWave: "1"
