--- a/ansible/roles/k3s/tasks/main.yml
+++ b/ansible/roles/k3s/tasks/main.yml
@@ -60,21 +60,14 @@
       ansible.builtin.command: /tmp/get_helm.sh
       environment:
         HELM_INSTALL_DIR: /usr/local/bin
-        DESIRED_VERSION: v3.19.5
+        DESIRED_VERSION: v3.20.0
       changed_when: true
 
-- name: Add Cilium Helm repository
-  kubernetes.core.helm_repository:
-    name: cilium
-    repo_url: https://helm.cilium.io/
-  environment:
-    KUBECONFIG: "{{ k3s_kubeconfig }}"
-  tags: [k3s, cilium]
-
-- name: Install Cilium CNI (required before ArgoCD)
+- name: Install Cilium CNI (via OCI)
   kubernetes.core.helm:
     name: cilium
-    chart_ref: cilium/cilium
+    chart_ref: oci://quay.io/cilium/charts/cilium
+    chart_version: 1.18.6
     release_namespace: kube-system
     create_namespace: true
     values_files:
