--- a/gitops/infrastructure/argocd/app.yaml
+++ b/gitops/infrastructure/argocd/app.yaml
@@ -1,7 +1,6 @@
 appName: argocd
 namespace: argocd
-chart: argo-cd
-repoURL: https://argoproj.github.io/argo-helm
-targetRevision: 9.3.5
+repoURL: oci://ghcr.io/argoproj/argo-helm/argo-cd
+targetRevision: 9.3.7
 syncWave: "-5"
 noBase: true
