--- a/gitops/infrastructure/backstage/base/httproute.yaml
+++ b/gitops/infrastructure/backstage/base/httproute.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: backstage
 spec:
   parentRefs:
-    - name: homelab-gateway
+    - name: gateway
       namespace: gateway
   hostnames:
     - backstage.home.lab
