--- a/gitops/infrastructure/cilium/base/httproute.yaml
+++ b/gitops/infrastructure/cilium/base/httproute.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 spec:
   parentRefs:
-    - name: homelab-gateway
+    - name: gateway
       namespace: gateway
   hostnames:
     - hubble.home.lab
