--- a/gitops/infrastructure/cert-manager/base/vault-issuer.yaml
+++ b/gitops/infrastructure/cert-manager/base/vault-issuer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   vault:
     server: http://vault.vault.svc:8200
-    path: pki/sign/homelab-dot-home-dot-lab
+    path: pki/sign/domain
     auth:
       kubernetes:
         mountPath: /v1/auth/kubernetes
