--- a/gitops/infrastructure/cilium/base/gateway.yaml
+++ b/gitops/infrastructure/cilium/base/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: homelab-gateway
+  name: gateway
   namespace: gateway
   annotations:
     cert-manager.io/cluster-issuer: vault-issuer
