--- a/gitops/bootstrap/applicationset-oci.yaml
+++ b/gitops/bootstrap/applicationset-oci.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: argocd
 spec:
   goTemplate: true
-  goTemplateOptions: ["missingkey=error"]
   generators:
     - git:
         repoURL: https://github.com/nunoferna/homelab.git
@@ -48,6 +47,7 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+          - ServerSideApply={{ default "false" .serverSideApply }}
 
 ---
 apiVersion: argoproj.io/v1alpha1
@@ -57,7 +57,6 @@ metadata:
   namespace: argocd
 spec:
   goTemplate: true
-  goTemplateOptions: ["missingkey=error"]
   generators:
     - git:
         repoURL: https://github.com/nunoferna/homelab.git
@@ -97,3 +96,4 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+          - ServerSideApply={{ default "false" .serverSideApply }}
