feat: migrate promtail to alloy
Signed-off-by: Nuno Fernandes <nuno.o.fernandes@outlook.pt>

--- a/gitops/infrastructure/cilium/values.yaml
+++ b/gitops/infrastructure/cilium/values.yaml
@@ -51,6 +51,8 @@ prometheus:
   enabled: true
   serviceMonitor:
     enabled: true
+    labels:
+      release: kube-prometheus-stack
 
 dashboards:
   enabled: true
