fix: directory recursive on base
Signed-off-by: Nuno Fernandes <nuno.o.fernandes@outlook.pt>

--- a/gitops/bootstrap/applicationset-helm.yaml
+++ b/gitops/bootstrap/applicationset-helm.yaml
@@ -38,6 +38,8 @@ spec:
         - repoURL: https://github.com/nunoferna/homelab.git
           targetRevision: main
           path: "{{.src.path.path}}/base"
+          directory:
+            recurse: true
       destination:
         server: https://kubernetes.default.svc
         namespace: "{{.namespace}}"
