--- a/gitops/bootstrap/applicationset.yaml
+++ b/gitops/bootstrap/applicationset.yaml
@@ -29,6 +29,8 @@ spec:
         repoURL: https://github.com/nunoferna/homelab.git
         targetRevision: main
         path: "{{.src.path.path}}/base"
+        directory:
+          recurse: true
       destination:
         server: https://kubernetes.default.svc
         namespace: "{{.namespace}}"
