refactor: change .home.lab to .internal icann standard
Signed-off-by: Nuno Fernandes <nuno.o.fernandes@outlook.pt>

--- a/gitops/infrastructure/argocd/values.yaml
+++ b/gitops/infrastructure/argocd/values.yaml
@@ -1,5 +1,5 @@
 global:
-  domain: argocd.home.lab
+  domain: argocd.apps.internal
 
 configs:
   params:
@@ -12,4 +12,4 @@ server:
       - name: gateway
         namespace: gateway
     hostnames:
-      - argocd.home.lab
+      - argocd.apps.internal
