--- a/gitops/infrastructure/backstage/base/httproute.yaml
+++ b/gitops/infrastructure/backstage/base/httproute.yaml
@@ -8,7 +8,7 @@ spec:
     - name: gateway
       namespace: gateway
   hostnames:
-    - backstage.home.lab
+    - backstage.apps.internal
   rules:
     - backendRefs:
         - name: backstage
