--- a/gitops/infrastructure/backstage/values.yaml
+++ b/gitops/infrastructure/backstage/values.yaml
@@ -37,9 +37,9 @@ backstage:
   appConfig:
     app:
       title: "Homelab Portal"
-      baseUrl: https://backstage.home.lab
+      baseUrl: https://backstage.apps.internal
     backend:
-      baseUrl: https://backstage.home.lab
+      baseUrl: https://backstage.apps.internal
       database:
         client: pg
         connection:
