--- a/gitops/security/vault/base/httproute.yaml
+++ b/gitops/security/vault/base/httproute.yaml
@@ -8,7 +8,7 @@ spec:
     - name: gateway
       namespace: gateway
   hostnames:
-    - vault.home.lab
+    - vault.apps.internal
   rules:
     - backendRefs:
         - name: vault-ui
