--- a/gitops/networking/cilium/base/gateway.yaml
+++ b/gitops/networking/cilium/base/gateway.yaml
@@ -22,11 +22,11 @@ spec:
     - name: https
       protocol: HTTPS
       port: 443
-      hostname: "*.home.lab"
+      hostname: "*.apps.internal" # ICANN Private-Use Application Standard: https://www.icann.org/en/board-activities-and-meetings/materials/approved-resolutions-special-meeting-of-the-icann-board-29-07-2024-en#section2.a
       allowedRoutes:
         namespaces:
           from: All
       tls:
         mode: Terminate
         certificateRefs:
-          - name: wildcard-home-lab-tls
+          - name: wildcard-apps-internal-tls
