--- a/gitops/observability/kube-prometheus-stack/base/httproute.yaml
+++ b/gitops/observability/kube-prometheus-stack/base/httproute.yaml
@@ -8,7 +8,7 @@ spec:
     - name: gateway
       namespace: gateway
   hostnames:
-    - grafana.home.lab
+    - grafana.apps.internal
   rules:
     - backendRefs:
         - name: kube-prometheus-stack-grafana
