--- a/gitops/observability/kube-prometheus-stack/values.yaml
+++ b/gitops/observability/kube-prometheus-stack/values.yaml
@@ -38,7 +38,7 @@ grafana:
     size: 10Gi
   grafana.ini:
     server:
-      root_url: "https://grafana.home.lab"
+      root_url: "https://grafana.apps.internal"
 
 # We use Gateway API, so disable the default Ingress
 ingress:
