feat: add kyverno grafana dashboards
Signed-off-by: Nuno Fernandes <nuno.o.fernandes@outlook.pt>

--- a/gitops/security/kyverno/values.yaml
+++ b/gitops/security/kyverno/values.yaml
@@ -16,6 +16,12 @@ reportsController:
   serviceMonitor:
     enabled: true
 
+grafana:
+  enabled: true
+  namespace: monitoring
+  labels:
+    grafana_dashboard: "1"
+
 config:
   resourceFilters:
     - "[Event,*,*]"
