--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -68,12 +68,12 @@ DNS2: ""
 extraEnvVars:
   TZ: "UTC"
   # Enable DHCP Server
-  FTLCONF_dhcp_active: true
+  FTLCONF_dhcp_active: false
   FTLCONF_dhcp_start: 192.168.1.64
   FTLCONF_dhcp_end: 192.168.1.239
   FTLCONF_dhcp_router: 192.168.1.254
-  FTLCONF_dns_reply_host_IPv4: 192.168.1.10
-  FTLCONF_dhcp_ipv6: true
+  FTLCONF_dns_reply_host_IPv4: 192.168.1.253
+  FTLCONF_dhcp_ipv6: false
   FTLCONF_dns_listeningMode: "LOCAL"
   FTLCONF_dns_upstreams: |-
     1.1.1.1
