--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -1,75 +1,2 @@
-adlists:
-  # HaGeZi Collections
-  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/gambling.txt
-  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/spam-tlds.txt
-  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/tif.txt
-  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/ultimate.txt
-
-  # Firebog Suspicious Lists
-  - https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt
-  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
-  - https://v.firebog.net/hosts/static/w3kbl.txt
-
-  # Firebog Advertising Lists
-  - https://adaway.org/hosts.txt
-  - https://v.firebog.net/hosts/AdguardDNS.txt
-  - https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt
-  - https://v.firebog.net/hosts/Easylist.txt
-  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/UncheckyAds/hosts
-
-  # Firebog Tracking & Telemetry Lists
-  - https://v.firebog.net/hosts/Easyprivacy.txt
-  - https://v.firebog.net/hosts/Prigent-Ads.txt
-  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts
-  - https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt
-  - https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt
-
-  # Firebog Malicious Lists
-  - https://v.firebog.net/hosts/Prigent-Crypto.txt
-  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Risk/hosts
-
-admin:
-  enabled: true
-
-# Persist Pi-hole settings.
-persistentVolumeClaim:
-  enabled: true
-  size: "2Gi"
-
-hostNetwork: true
-capabilities:
-  add:
-    - NET_ADMIN
-
-serviceDhcp:
-  enabled: false
-
-serviceDns:
-  type: ClusterIP
-
-strategyType: Recreate
-
-DNS1: ""
-DNS2: ""
-
-# Basic Pi-hole env defaults.
-extraEnvVars:
-  TZ: "UTC"
-  # Enable DHCP Server
-  FTLCONF_dhcp_active: false
-  FTLCONF_dhcp_start: 192.168.1.64
-  FTLCONF_dhcp_end: 192.168.1.239
-  FTLCONF_dhcp_router: 192.168.1.254
-  FTLCONF_dns_reply_host_IPv4: 192.168.1.253
-  FTLCONF_dhcp_ipv6: false
-  FTLCONF_dns_listeningMode: "LOCAL"
-  FTLCONF_dns_upstreams: |-
-    1.1.1.1
-    1.0.0.1
-    2606:4700:4700::1111
-    2606:4700:4700::1001
-  FTLCONF_dns_hosts: |-
-    192.168.1.240 *.apps.internal
-  FTLCONF_dns_interface: "eth0"
-  FTLCONF_dns_domain_name: "apps.internal"
-  FTLCONF_dns_dnssec: true
+networking:
+  hostNetwork: true
