--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -1,2 +1,43 @@
 networking:
   hostNetwork: true
+
+pihole:
+  lists:
+    adlists:
+      # HaGeZi Collections
+      - address: https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/gambling.txt
+      - address: https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/spam-tlds.txt
+      - address: https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/tif.txt
+      - address: https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/ultimate.txt
+
+      # Firebog Suspicious Lists
+      - address: https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt
+      - address: https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
+      - address: https://v.firebog.net/hosts/static/w3kbl.txt
+
+      # Firebog Advertising Lists
+      - address: https://adaway.org/hosts.txt
+      - address: https://v.firebog.net/hosts/AdguardDNS.txt
+      - address: https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt
+      - address: https://v.firebog.net/hosts/Easylist.txt
+      - address: https://raw.githubusercontent.com/FadeMind/hosts.extras/master/UncheckyAds/hosts
+      # Firebog Tracking & Telemetry Lists
+      - address: https://v.firebog.net/hosts/Easyprivacy.txt
+      - address: https://v.firebog.net/hosts/Prigent-Ads.txt
+      - address: https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts
+      - address: https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt
+      - address: https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt
+
+      # Firebog Malicious Lists
+      - address: https://v.firebog.net/hosts/Prigent-Crypto.txt
+      - address: https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Risk/hosts
+    
+  ftl:
+    dns:
+      upstreams:
+        - "1.0.0.1"
+        - "1.1.1.1"
+
+serviceDns:
+  enabled: true
+  type: ClusterIP
