--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -41,3 +41,18 @@ pihole:
 serviceDns:
   enabled: true
   type: ClusterIP
+
+metrics:
+  enabled: true
+  image:
+    repository: ekofr/pihole-exporter
+    tag: v1.2.0
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+  dashboards:
+    enabled: true
+  serviceMonitor:
+    enabled: true
+    labels:
+      release: kube-prometheus-stack
